--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,11 @@ main {
   align-items: center;
 }
 
+h1 {
+  text-align: center;
+  padding: 2rem;
+}
+
 code {
   background: #fafafa;
   border-radius: 5px;
