--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,13 @@ body {
 }
 
 main {
-  padding: 5rem 0;
+  padding: 0;
+  margin: 0;
+  height: 100vh;
+  width: 100vw;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -19,9 +25,49 @@ main {
   align-items: center;
 }
 
-h1 {
+img {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+main:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  background-image: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.8),
+    rgba(0, 0, 0, 0) 60%,
+    rgba(0, 0, 0, 0.8) 100%
+  );
+}
+
+.hero-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
   padding: 2rem;
+  color: #eee;
+  z-index: 1;
+  width: 300px;
+  min-width: 300px;
+  height: 300px;
+  min-height: 300px;
+  background: #00000066;
+  border-radius: 50%;
+  font-family: "Merienda", cursive;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 1.3em;
 }
 
 code {
